Corrections PDF (bugs backend)